# DVRstudy

./: .gitignore  CMakeLists.txt
AutoGen/: CMakeLists.txt
AutoGen/include/: AutoGenApp.hpp  DVRstudyAppBase.hpp  TextureRenderMaterial.hpp  VolumeTextureMaterial.hpp
AutoGen/src/: AutoGenApp.cpp  DVRstudyAppBase.cpp  TextureRenderMaterial.cpp  VolumeTextureMaterial.cpp  main.cpp
BasicHolo/: CMakeLists.txt
BasicHolo/include/: BasicHoloApp.hpp  CubeTextureMaterial.hpp  SquareTextureMaterial.hpp  TexCoordRenderMaterial.hpp
BasicHolo/src/: BasicHoloApp.cpp  CubeTextureMaterial.cpp  SquareTextureMaterial.cpp  TexCoordRenderMaterial.cpp  main.cpp
DVRstudyAppBase/: CMakeLists.txt
DVRstudyAppBase/src/: DVRstudyAppBase.cpp
GLEngine/: CMakeLists.txt
GLEngine/include/GLEngine/: Camera.hpp  RenderObject.hpp
GLEngine/include/GLEngine/Base/: Exception.hpp  Material.hpp  Mesh.hpp  Program.hpp  Shader.hpp  Transform.hpp
GLEngine/src/: Camera.cpp  RenderObject.cpp
GLEngine/src/Base/: Exception.cpp  Material.cpp  Mesh.cpp  Program.cpp  Shader.cpp  Transform.cpp
Resources/shader/: AutoGenFragment.glsl  AutoGenTexFragment.glsl  AutoGenVertex.glsl
Resources/shader/BasicHolo/: CubeTextureFragment.glsl  SquareTextureFragment.glsl  SquareTextureVertex.glsl
Resources/volume/: VolumeGen.py
